--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,13 +2,13 @@
     "version" :2,
     "builds": [
         {
-            "src":"app.js","use":"@vercel/node"
+            "src":"server.js","use":"@vercel/node"
         }
     ],
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"/app.js"
+            "dest":"/server.js"
         }
     ]
 }
